created restfull server with gwt client

--- a/src/main/webapp/GeneratorEmployees.html
+++ b/src/main/webapp/GeneratorEmployees.html
@@ -1,15 +1,17 @@
 <html>
 <head>
+    <link rel="stylesheet" href="resources/css/GeneratorEmployees.css">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>GeneratorEmployees Application</title>
-    <link rel="stylesheet" href="resources/css/Main.css">
+
 </head>
 <body>
-<script type="text/javascript" language="javascript"
-        src="ua.ck.codenvy.simulator.GeneratorEmployees/ua.ck.codenvy.simulator.GeneratorEmployees.nocache.js"></script>
-<h1>Generator Employees Application</h1>
-<a href="/index.html" title="Enterprise Company" class="logo">Company</a>
-<a href="/GeneratorEmployees.html" title="Enterprise Company" class="logo">Generator</a>
-<a href="/ManagementEmployees.html" title="Enterprise Company" class="logo">Employees</a>
-<div id="generatorList"></div>
+    <script type="text/javascript" language="javascript"
+            src="Generator/Generator.nocache.js"></script>
+    <h1>Generator Employees</h1>
+    <a href="index.html" title="Enterprise Company" class="logo">Company</a>
+    <a href="GeneratorEmployees.html" title="Enterprise Company" class="logo">Generator</a>
+    <a href="ManagementEmployees.html" title="Enterprise Company" class="logo">Employees</a>
+    <div id="generatorList"></div>
 </body>
 </html>
