--- a/src/main/webapp/ManagementEmployees.html
+++ b/src/main/webapp/ManagementEmployees.html
@@ -1,15 +1,18 @@
 <html>
 <head>
-    <title>ManagementEmployees Application</title>
-    <link rel="stylesheet" href="resources/css/Main.css">
+    <link rel="stylesheet" href="resources/css/ManagementEmployees.css">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
+    <title>Web Application Starter Project 1234</title>
+
+    <script type="text/javascript" language="javascript"
+            src="ManagementEmployees/ManagementEmployees.nocache.js"></script>
 </head>
 <body>
-<script type="text/javascript" language="javascript"
-        src="ua.ck.codenvy.simulator.ManagementEmployees/ua.ck.codenvy.simulator.ManagementEmployees.nocache.js"></script>
-<h1>Management Employees Application</h1>
-<a href="/index.html" title="Enterprise Company" class="logo">Company</a>
-<a href="/GeneratorEmployees.html" title="Enterprise Company" class="logo">Generator</a>
-<a href="/ManagementEmployees.html" title="Enterprise Company" class="logo">Employees</a>
-<div id="employeesList"></div>
+    <h1>Management Employees</h1>
+    <a href="index.html" title="Enterprise Company" class="logo">Company</a>
+    <a href="GeneratorEmployees.html" title="Enterprise Company" class="logo">Generator</a>
+    <a href="ManagementEmployees.html" title="Enterprise Company" class="logo">Employees</a>
+    <div id="employeesList"></div>
 </body>
 </html>
