Revert "created restfull server with gwt client"
This reverts commit ca4230e18353451108e43d32f75902052a6b12c4.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,13 @@
 <html>
 <head>
+    <title>GeneratorEmployees Application</title>
     <link rel="stylesheet" href="resources/css/Main.css">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
-    <title>Web Application Starter Project</title>
-
 </head>
 <body>
-    <h1>Application</h1>
-    <a href="index.html" title="Enterprise Company" class="logo">Company</a>
-    <a href="GeneratorEmployees.html" title="Enterprise Company" class="logo">Generator</a>
-    <a href="ManagementEmployees.html" title="Enterprise Company" class="logo">Employees</a>
+
+<h1>Generator Employees Application</h1>
+    <a href="/index.html" title="Enterprise Company" class="logo">Company</a>
+    <a href="/GeneratorEmployees.html" title="Enterprise Company" class="logo">Generator</a>
+    <a href="/ManagementEmployees.html" title="Enterprise Company" class="logo">Employees</a>
 </body>
 </html>
